--- a/config/megaraid.conf
+++ b/config/megaraid.conf
@@ -5,7 +5,7 @@ LoadPlugin python
     LogTraces true
     Interactive false
     Import "collectd_megaraid.collectd_plugin"
-   <Module collectd_plugin>
+   <Module "megaraid">
      Verbose True
    </Module>
 </Plugin>
